    - Add "expert" mode boot to syslinux, which sets DEBCONF_PRIORITY=low.
    - Include a doc/index.en.html in the install-images tarball, so
      debian-cd will find some documentation and not include the boot floppies
      docs.
    - Include INSTALLATION-HOWTO there too, by way of a gross, gross hack.
    - netcfg reorg
    - scsi-common-modules reorg
  * Thiemo Seufer
    - Build the demo tree only for architectures which support it.
    - Don't build images for the demo target.
    - Ensure TYPE=demo for the Makefile's demo target.
    - Remove stamp files for tree and get_udebs at the begin of their rule,
      create them at the rule's end.
    - Ignore errors for the all_clean target.
    - Don't use USERDEVFS for linux-mips.
    - Fix 'make clean' if type demo is unsupported.
  * Marco d'Itri
    - Add preliminary support for .ko kernel modules.

 -- Joey Hess <joeyh@debian.org>  Sat, 13 Dec 2003 18:44:06 -0500

debian-installer (20031212) unstable; urgency=low

  * Joey Hess
    - Switch i386 to using dhcp-client rather than pump for netboot.
      Left it using pump on other arches that did not already use dhcp-client,
      at least for now.
    - Switch i386, hppa, and ia64 to dhcp-client rather than udhcp
      on the root floppy.
    - Switch powerpc to pump on the root floppy.
    - Switch i386 to dhcp-client rather than udhcp on the access floppy.
    - Switch from pump to dhcp-client on powerpc.
    - Add disk labels to the i386 floppy images, for use by the bootfloppy
      initrd, and maybe later by the floppy retreiver, etc.
    - In debian/rules, if the changelog is UNRELEASED, use unstable as the
      DISTRIBUTION.
    - makelabel takes the build date as its second parameter. Calculating
      BUILD_DATE once at the start to avoid inconsistencies during
      long/midnight builds.
    - Add MEDIA_TYPE to configs for bootable image types.
    - Add DEBIAN_VERSION to config.